[gd_scene load_steps=2 format=3 uid="uid://cfr0ipevuedsi"]

[ext_resource type="Script" path="res://scenes/debug/DebugXMLParser.gd" id="1_6j4vw"]

[node name="DebugXMLParser" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource("1_6j4vw")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -75.0
offset_right = 100.0
offset_bottom = 75.0

[node name="Label" type="Label" parent="VBoxContainer"]
layout_mode = 2
text = "XML Parsing Debug"
horizontal_alignment = 1

[node name="TestButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test XML Parsing"

[node name="TestExtractButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Extract Function"

[node name="TestSingleItemButton" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Test Single Item Parse"

[connection signal="pressed" from="VBoxContainer/TestButton" to="." method="_on_test_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TestExtractButton" to="." method="_on_test_extract_button_pressed"]
[connection signal="pressed" from="VBoxContainer/TestSingleItemButton" to="." method="_on_test_single_item_button_pressed"]
